--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #007bff;
+    --primary-color: #00ff22;
     --secondary-color: #6c757d;
     --dark-color: #343a40;
     --light-color: #f8f9fa;
