--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .hero-section {
-    background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+    background: linear-gradient(135deg, #279c4a 0%, #1c9942 100%);
     margin-top: 76px;
 }
 
@@ -72,7 +72,7 @@ body {
 }
 
 .btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
+    background-color: #1dbe40;
+    border-color: #20942f;
     transform: translateY(-2px);
 }
