forzando el cambio

--- a/templates/about.html
+++ b/templates/about.html
@@ -56,7 +56,7 @@
             </div>
 
             <!-- Education -->
-            <h3 class="mb-4 mt-5">Educación</h3>
+            <h3 class="mb-4 mt-5">Educación!</h3>
             <div class="row">
                 {% for edu in data.education %}
                 <div class="col-md-6 mb-3">
